<resources>
    <string name="app_name">BazaDrzewMobile</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="sign_in">Zaloguj</string>
    <string name="haslo_placeholder"/>
    <string name="haslo_placeholder2">Hasło</string>
    <string name="login_placeholder">Login</string>
    <string name="nazwa_polska_placeholder">Nazwa polska</string>
    <string name="nazwa_latin_placeholder">Nazwa łacińska</string>
    <string name="opis_placeholder">Opis</string>
    <string name="data_dodania_placeholder">Data dodania(RRRR/MM/DD)</string>
    <string name="title_activity_register">Register</string>
    <string name="register_txt">Zarejestruj</string>
    <string name="lokalizacja_placeholder">Lokalizacja(LAT, LON)</string>
    <string name="dodatkowa_lok_placeholder">Dodatkowa lokalizacja</string>
    <string name="dodaj_drzewo_text">Dodaj drzewo</string>
    <string name="zlokalizuj_mapa">Zlokalizuj na mapie</string>
    <string name="geokodowanie">Geokodowanie</string>
    <string name="aktual_lok">Aktulna lokalizacja</string>
    <string name="dodaj_zdjecia">Dodaj zdjęcia</string>
    <string name="offline">OFFLINE</string>
</resources>
